--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ENS token claim app"
+      content="Delegate your ENS tokens a delegate"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
